syntax = "proto3";

option go_package = "genproto/user_service";

package user_service;

service AuthService {
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc VerifyEmail(VerifyEmailRequest) returns (VerifyEmailResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
}

message LoginRequest {
  string username = 1;
  string password = 2;
  string email = 3;
  string platform = 4;
}

message LoginResponse {
  string access_token = 1;
}

message RegisterRequest {
  string fullname = 1;
  string usertype = 2;
  string userrole = 3;
  string username = 4;
  string email = 5;
  string status = 6;
  string password = 7;
  string gender = 8;
}
  
message RegisterResponse {
  string access_token = 1;
}

message VerifyEmailRequest {
  string email = 1;
  string otp = 2;
  string platform = 3;
}

message VerifyEmailResponse {
  string message = 2;
}

