syntax = "proto3";

import "google/protobuf/empty.proto";

option go_package = "genproto/user_service";

package user_service;

service SessionService {
    rpc Create(Session) returns (Session) {}
    rpc GetSingle(SessionSingleRequest) returns (Session) {}
    rpc GetList(GetListSessionRequest) returns (GetListSessionResponse) {}
    rpc Update(Session) returns (Session) {}
    rpc Delete(SessionSingleRequest) returns (google.protobuf.Empty) {}
}

message Session {
    string id = 1;
    string user_id = 2;
    string ip_address = 3;
    string user_agent = 4;
    bool is_active = 5;
    string expires_at = 6;
    string last_active_at = 7;
    string platform = 8;
    string created_at = 9;
    string updated_at = 10;
}

message SessionSingleRequest {
    string id = 1;
}

message GetListSessionRequest {
    uint64 page = 1;
    uint64 limit = 2;
    string search = 3;
}

message GetListSessionResponse {
    int64 count = 1;
    repeated Session sessions = 2;
}
